updated documentation and corss linking

--- a/examples/forms/popup-error-2.html
+++ b/examples/forms/popup-error-2.html
@@ -26,7 +26,7 @@
   <main>
     <h1>Credit Card Form with Popup Errors</h1>
     <p>
-      The following pizza ordering form example using standard HTML5 form controls demonstrates how to make required form fields, identifying forms with invalid values, instructional information and popup error messages accessible to screen reader users using the <a href="../../#forms">Form Input Assistance design pattern.</a>
+      The following pizza ordering form example using standard HTML5 form controls demonstrates how to make required form fields, identifying forms with invalid values, instructional information and popup error messages accessible to screen reader users using the <a href="../../#forms">Form Input Assistance design pattern.</a>  This example dynamically updates help and validation information based on the credit card selected.
     </p>
     <p>Similar examples include:</p>
     <ul>
