use label[for] where appropriate

--- a/examples/combobox/aria1.1pattern/grid-combo.html
+++ b/examples/combobox/aria1.1pattern/grid-combo.html
@@ -53,7 +53,7 @@
       <h2 id="ex_label">Example</h2>
       <div role="separator" id="ex_start_sep" aria-labelledby="ex_start_sep ex_label" aria-label="Start of"></div>
       <div id="ex1">
-        <label id="ex1-label" class="combobox-label">
+        <label for="ex1-input" id="ex1-label" class="combobox-label">
           Fruits and vegetables
         </label>
         <div class="combobox-wrapper">
@@ -65,7 +65,6 @@
             <input type="text"
               aria-autocomplete="list"
               aria-controls="ex1-grid"
-              aria-labelledby="ex1-label"
               id="ex1-input">
           </div>
           <div
