updated file structure

--- a/examples/treeview/multiselectable-1/multiselectable-1b.html
+++ b/examples/treeview/multiselectable-1/multiselectable-1b.html
@@ -33,7 +33,7 @@
         The below example implements the
         <a href="../../../#TreeView">Treeview Design Pattern</a>
         to simulate the selection of multiple files.
-        When users select or unselect an item that represents a file name in the tree widget below, the list of current set of selected files appears in a read-only textarea field next to the tree widget.  This example sets <code>aria-selected=<q>true</q></code> when a file is selected and removes the <code>aria-selected</code> property when the file is not selected.
+        When users select or unselect an item that represents a file name in the tree widget below, the list of current set of selected files appears in a read-only textarea field next to the tree widget.  This example sets <code>aria-selected=<q>true</q></code> when a file is selected and sets the <code>aria-selected=<q>false</q></code> property when the file is not selected.
       </p>
       </p>
       <p>
