--- a/examples/toolbar/toolbar.html
+++ b/examples/toolbar/toolbar.html
@@ -46,31 +46,31 @@
     <div role="separator" id="ex_start_sep" aria-labelledby="ex_start_sep ex_label" aria-label="Start of"></div>
     <div id="ex1">
         <div class="toolbar" role="toolbar">
-            <div class="toolbar-item selected" role="button" tabindex="0" value="bold">
+            <div class="toolbar-item bold" role="button" aria-pressed="false" value="bold">
               <i class="fas fa-bold"></i>
             </div>
-            <div class="toolbar-item" role="button" tabindex="-1">
+            <div class="toolbar-item italic" role="button" aria-pressed="false" value="italic">
               <i class="fas fa-italic"></i>
             </div>
-            <div class="toolbar-item" role="button" tabindex="-1">
+            <div class="toolbar-item textAlign" role="button" aria-pressed="false" value="left">
               <i class="fas fa-align-left"></i>
             </div>
-            <div class="toolbar-item" role="button" tabindex="-1">
+            <div class="toolbar-item" role="button" aria-pressed="false" value="center">
               <i class="fas fa-align-center"></i>
             </div>
-            <div class="toolbar-item" role="button" tabindex="-1">
+            <div class="toolbar-item" role="button" aria-pressed="false" value="right">
               <i class="fas fa-align-right"></i>
             </div>
-            <div class="toolbar-item" role="button" tabindex="-1">
+            <div class="toolbar-item" role="button" >
               <i class="fas fa-plus"></i>
             </div>
-            <div class="toolbar-item" role="button" tabindex="-1">
+            <div class="toolbar-item" role="button">
               <i class="fas fa-minus"></i>
             </div>
 
             <div class="menu-wrapper">
               <button
-                tabindex="-1"
+                 
                 aria-haspopup="true"
                 aria-controls="menu1"
                 class="toolbar-item menu-button">
