updated links and added aria-multiselectable to tree role

--- a/examples/treeview/multiselectable-1/multiselectable-1b.html
+++ b/examples/treeview/multiselectable-1/multiselectable-1b.html
@@ -44,7 +44,7 @@
       <ul>
         <li><a href="../treeview-1/treeview-1a.html">File Directory Treeview using <em>computed</em> properties</a></li>
         <li><a href="../treeview-1/treeview-1b.html">File Directory Treeview using <em>declared</em> properties</a></li>
-        <li><a href="../multi-select-1/multiselectable-1a.html">File Directory Multi-Select Treeview using <em>computed</em> properties</a></li>
+        <li><a href="../multiselectable-1/multiselectable-1a.html">File Directory Multi-Select Treeview using <em>computed</em> properties</a></li>
         <li><a href="../treeview-2/treeview-2a.html">Navigation Treeview using <em>computed</em> properties</a></li>
         <li><a href="../treeview-2/treeview-2b.html">Navigation Treeview using <em>declared</em> properties</a></li>
       </ul>
@@ -57,7 +57,9 @@
             <h3 id="tree_label">
                File Selector
              </h3>
-        <ul role="tree" aria-labelledby="tree1">
+        <ul role="tree"
+            aria-multiselectable="true"
+            aria-labelledby="tree1">
           <li role="treeitem"
             aria-level="1"
             aria-setsize="3"
