--- a/examples/treeview/multiselectable-1/multiselectable-1a.html
+++ b/examples/treeview/multiselectable-1/multiselectable-1a.html
@@ -46,7 +46,7 @@
       <ul>
         <li><a href="../treeview-1/treeview-1a.html">File Directory Treeview using <em>computed</em> properties</a></li>
         <li><a href="../treeview-1/treeview-1b.html">File Directory Treeview using <em>declared</em> properties</a></li>
-        <li><a href="../multi-select-1/multiselectable-1b.html">File Directory Multi-Select Treeview using <em>declared</em> properties</a></li>
+        <li><a href="../multiselectable-1/multiselectable-1b.html">File Directory Multi-Select Treeview using <em>declared</em> properties</a></li>
         <li><a href="../treeview-2/treeview-2a.html">Navigation Treeview using <em>computed</em> properties</a></li>
         <li><a href="../treeview-2/treeview-2b.html">Navigation Treeview using <em>declared</em> properties</a></li>
       </ul>
@@ -60,7 +60,8 @@
           <h3 id="tree_label">File Selector</h3>
 
           <ul role="tree"
-              aria-labelledby="tree_label">
+              aria-labelledby="tree_label"
+              aria-multiselectable="true">
             <li role="treeitem"
                 aria-expanded="false">
               <span>
