--- a/examples/toolbar/toolbar.html
+++ b/examples/toolbar/toolbar.html
@@ -19,6 +19,7 @@
 <link href="css/toolbar.css" rel="stylesheet">
 <script src="js/toolbar.js" type="text/javascript"></script>
 <script src="js/main.js" type="text/javascript"></script>
+<script src = "js/toolbarItem.js" type="text/javascript"></script>
 </head>
 <body>
   <nav aria-label="Related Links" class="feedback">
