--- a/examples/treeview/multiselectable-1/multiselectable-1b.html
+++ b/examples/treeview/multiselectable-1/multiselectable-1b.html
@@ -13,7 +13,7 @@
 
     <link href="css/tree.css" rel="stylesheet">
 
-    <script type="text/javascript" src="js/multiselectable-tree-b.js"></script>
+    <script type="text/javascript" src="js/multiselectable-tree.js"></script>
     <script type="text/javascript" src="js/multiselectable-treeitem.js"></script>
 
   </head>
@@ -44,7 +44,7 @@
       <ul>
         <li><a href="../treeview-1/treeview-1a.html">File Directory Treeview using <em>computed</em> properties</a></li>
         <li><a href="../treeview-1/treeview-1b.html">File Directory Treeview using <em>declared</em> properties</a></li>
-        <li><a href="../multiselectable-1/multiselectable-1a.html">File Directory Multi-Select Treeview using <em>computed</em> properties</a></li>
+        <li><a href="../multiselectable-1/multiselectable-1a.html">File Directory Multiselectable Treeview using <em>computed</em> properties</a></li>
         <li><a href="../treeview-2/treeview-2a.html">Navigation Treeview using <em>computed</em> properties</a></li>
         <li><a href="../treeview-2/treeview-2b.html">Navigation Treeview using <em>declared</em> properties</a></li>
       </ul>
