--- a/examples/forms/popup-error.html
+++ b/examples/forms/popup-error.html
@@ -12,7 +12,7 @@
 <script src="../js/app.js"></script>
 
 <link href="css/popup-error.css" rel="stylesheet">
-<script src="js/popup-error-1.js" type="text/javascript"></script>
+<script src="js/popup-error.js" type="text/javascript"></script>
 </head>
 <body>
   <nav aria-label="Related Links" class="feedback">
@@ -28,10 +28,6 @@
     <p>
       The following pizza ordering form example using standard HTML5 form controls demonstrates how to make required form fields, identifying forms with invalid values, instructional information and popup error messages accessible to screen reader users using the <a href="../../#forms">Form Input Assistance design pattern.</a>
     </p>
-    <p>Similar examples include:</p>
-    <ul>
-      <li><a href="popup-error-2.html">Credit card processing form</a>: A set of standard HTML5 input forms demonstrating required and invalid input, fields with instructions and popup error feedback.</li>
-    </ul>
     <section>
     <h2 id="ex_label">Example</h2>
 
@@ -298,6 +294,129 @@
     </fieldset>
 
     <div class="cost"><label>Total Cost: <input id="id-total-cost" value="$0"/></label></div>
+
+    <h3>
+      Payment Information
+    </h3>
+    <div class="select">
+      <label for="id-card">
+        Card Type
+      </label>
+      <select id="id-card"
+            required
+            aria-invalid="false"
+            aria-errormessage="id-card-error"
+            onChange="setCardType()"
+            onblur="validateCardType()"
+            >
+      </select>
+      <span id="id-card-error" class="noerror" role="status">
+      </span>
+    </div>
+
+
+    <div class="text">
+      <label for="id-card-name">
+        Name on Card
+      </label>
+      <input id="id-card-name"
+           required
+           aria-invalid="false"
+           type="text"
+           size="20"
+           aria-errormessage="id-card-name-error"
+           aria-describedby="id-card-name-inst"
+           onblur="validateCardName()">
+      <span id="id-card-name-error" class="noerror" role="status">
+      </span>
+      <div class="instruction" id="id-card-name-inst">Example: John C Doe</div>
+    </div>
+
+    <div class="text">
+      <label for="id-card-number">
+        Card Number
+      </label>
+      <input id="id-card-number"
+           required
+           aria-invalid="false"
+           type="text"
+           size="22"
+           aria-errormessage="id-card-number-error"
+           aria-describedby="id-card-number-inst"
+           onblur="validateCardNumber()">
+      <span id="id-card-number-error" class="noerror" role="status">
+      </span>
+      <div class="instruction" id="id-card-number-inst" aria-label="">--</div>
+    </div>
+
+    <div class="text">
+      <label for="id-card-secure">
+        Secure Code
+      </label>
+      <input id="id-card-secure"
+           required
+           aria-invalid="false"
+           type="text"
+           size="5"
+           aria-errormessage="id-secure-error"
+           aria-describedby="id-secure-code-inst"
+           onblur="validateCardSecureCode()">
+      <span id="id-card-secure-error" class="noerror" role="status">
+      </span>
+      <div class="instruction" id="id-card-secure-code-inst" aria-label="">--</div>
+    </div>
+
+    <div class="text">
+      <label for="id-card-date">
+        Expiration date
+      </label>
+      <input id="id-card-date"
+           required
+           aria-invalid="false"
+           type="text"
+           size="9"
+           aria-errormessage="id-date-error"
+           aria-describedby="id-date-inst"
+           onblur="validateDate()">
+      <span id="id-card-date-error" class="noerror" role="status">
+      </span>
+      <div class="instruction" id="id-card-date-inst" aria-label="2 digit month, slash character, 4 digit year">MM/YYYY</div>
+    </div>
+
+    <h3>Billing Information</h3>
+    <div class="text">
+      <label for="id-card-address">
+        Billing Address
+      </label>
+      <input id="id-card-address"
+           required
+           aria-invalid="false"
+           type="text"
+           size="30"
+           onblur="validateAddress()"
+           aria-describedby="id-card-address-inst"
+           aria-errormessage="id-card-address-error">
+      <span id="id-card-address-error" class="noerror" role="status">
+      </span>
+      <div class="instruction" id="id-card-address-inst" >Example: 123 Main Street</div>
+    </div>
+
+    <div class="text">
+      <label for="id-card-zipcode">
+        Zip Code
+      </label>
+      <input id="id-card-zipcode"
+           required
+           aria-invalid="false"
+           type="text"
+           size="14"
+           onblur="validateZipCode()"
+           aria-describedby="id-card-zipcode-inst"
+           aria-errormessage="id-card-zipcode-error">
+      <span id="id-card-zipcode-error" class="noerror" role="status">
+      </span>
+      <div class="instruction" id="id-card-zipcode-inst" aria-label="enter a 5 digit zipcode">Example: 12345</div>
+    </div>
 
     <input type="submit"
      value="Submit Order"
