grid/LayoutGrids.html tests: all attributes, arrow-left, arrow-right

--- a/examples/grid/LayoutGrids.html
+++ b/examples/grid/LayoutGrids.html
@@ -455,7 +455,7 @@
         </tr>
       </thead>
       <tbody>
-        <tr>
+        <tr data-test-id="key-right-arrow">
           <th>
             <kbd>Right Arrow</kbd>
           </th>
@@ -468,7 +468,7 @@
             </ul>
           </td>
         </tr>
-        <tr>
+        <tr data-test-id="key-left-arrow">
           <th>
             <kbd>Left Arrow</kbd>
           </th>
@@ -481,7 +481,7 @@
             </ul>
           </td>
         </tr>
-        <tr>
+        <tr data-test-id="key-down-arrow">
           <th>
             <kbd>Down Arrow</kbd>
           </th>
@@ -496,7 +496,7 @@
             </ul>
           </td>
         </tr>
-        <tr>
+        <tr data-test-id="key-up-arrow">
           <th>
             <kbd>Up Arrow</kbd>
           </th>
@@ -511,7 +511,7 @@
             </ul>
           </td>
         </tr>
-        <tr>
+        <tr data-test-id="key-page-down">
           <th>
             <kbd>Page Down</kbd> (Example 3)
           </th>
@@ -523,7 +523,7 @@
             </ul>
           </td>
         </tr>
-        <tr>
+        <tr data-test-id="key-page-up">
           <th>
             <kbd>Page Up</kbd> (Example 3)
           </th>
@@ -535,25 +535,25 @@
             </ul>
           </td>
         </tr>
-        <tr>
+        <tr data-test-id="key-home">
           <th>
             <kbd>Home</kbd>
           </th>
           <td>Moves focus to the first cell in the row that contains focus.</td>
         </tr>
-        <tr>
+        <tr data-test-id="key-end">
           <th>
             <kbd>End</kbd>
           </th>
           <td>Moves focus to the last cell in the row that contains focus.</td>
         </tr>
-        <tr>
+        <tr data-test-id="key-control-home">
           <th>
             <kbd>Control + Home</kbd>
           </th>
           <td>Moves focus to the first cell in the first row.</td>
         </tr>
-        <tr>
+        <tr data-test-id="key-control-end">
           <th>
             <kbd>Control + End</kbd>
           </th>
@@ -575,7 +575,7 @@
         </tr>
       </thead>
       <tbody>
-        <tr>
+        <tr data-test-id="grid-role">
           <th scope="row"><code>grid</code></th>
           <td></td>
           <td><code>div</code></td>
@@ -584,7 +584,7 @@
             Because focus is managed using <a href="../../#kbd_roving_tabindex">roving tabindex</a>, the grid element is not focusable.
           </td>
         </tr>
-        <tr>
+        <tr data-test-id="aria-labelledby">
           <td></td>
           <th scope="row">
             <code>aria-labelledby=&quot;ID_REF&quot;</code>
@@ -592,7 +592,7 @@
           <td><code>div</code></td>
           <td>In examples 1 and 2, refers to the element that labels the grid.</td>
         </tr>
-        <tr>
+        <tr data-test-id="aria-label">
           <td></td>
           <th scope="row">
             <code>aria-label=&quot;Search Results&quot;</code>
@@ -600,7 +600,7 @@
           <td><code>div</code></td>
           <td>In example 3, the grid does not have a visible label so the label is specified with <code>aria-label</code>.</td>
         </tr>
-        <tr>
+        <tr data-test-id="aria-rowcount">
           <td></td>
           <th scope="row"><code>aria-rowcount=&quot;19&quot;</code></th>
           <td><code>div</code></td>
@@ -612,7 +612,7 @@
             </ul>
           </td>
         </tr>
-        <tr>
+        <tr data-test-id="row-role">
           <th scope="row"><code>row</code></th>
           <td></td>
           <td><code>div</code></td>
@@ -628,7 +628,7 @@
             </ul>
           </td>
         </tr>
-        <tr>
+        <tr data-test-id="aria-rowindex">
           <td></td>
           <th scope="row"><code>aria-rowindex=&quot;INDEX_VALUE&quot;</code></th>
           <td><code>div</code></td>
@@ -641,13 +641,13 @@
             </ul>
           </td>
         </tr>
-        <tr>
+        <tr data-test-id="gridcell-role">
           <th scope="row"><code>gridcell</code></th>
           <td></td>
-          <td><code>span</code></td>
+          <td><code>span, div</code></td>
           <td>Identifies the element containing the content for a single cell.</td>
         </tr>
-        <tr>
+        <tr data-test-id="tabindex">
           <td></td>
           <th scope="row"><code>tabindex=&quot;-1&quot;</code></th>
           <td><code>span</code></td>
@@ -658,7 +658,7 @@
             </ul>
           </td>
         </tr>
-        <tr>
+        <tr data-test-id="tabindex">
           <td></td>
           <th scope="row"><code>tabindex=&quot;-1&quot;</code></th>
           <td>Widgets inside cells</td>
