grid/LayoutGrids.html: add data-test-id

--- a/examples/grid/LayoutGrids.html
+++ b/examples/grid/LayoutGrids.html
@@ -460,7 +460,7 @@
         </tr>
       </thead>
       <tbody>
-        <tr>
+        <tr data-test-id="key-right-arrow">
           <th>
             <kbd>Right Arrow</kbd>
           </th>
@@ -473,7 +473,7 @@
             </ul>
           </td>
         </tr>
-        <tr>
+        <tr data-test-id="key-left-arrow">
           <th>
             <kbd>Left Arrow</kbd>
           </th>
@@ -486,7 +486,7 @@
             </ul>
           </td>
         </tr>
-        <tr>
+        <tr data-test-id="key-down-arrow">
           <th>
             <kbd>Down Arrow</kbd>
           </th>
@@ -501,7 +501,7 @@
             </ul>
           </td>
         </tr>
-        <tr>
+        <tr data-test-id="key-up-arrow">
           <th>
             <kbd>Up Arrow</kbd>
           </th>
@@ -516,7 +516,7 @@
             </ul>
           </td>
         </tr>
-        <tr>
+        <tr data-test-id="key-page-down">
           <th>
             <kbd>Page Down</kbd> (Example 3)
           </th>
@@ -528,7 +528,7 @@
             </ul>
           </td>
         </tr>
-        <tr>
+        <tr data-test-id="key-page-up">
           <th>
             <kbd>Page Up</kbd> (Example 3)
           </th>
@@ -540,25 +540,25 @@
             </ul>
           </td>
         </tr>
-        <tr>
+        <tr data-test-id="key-home">
           <th>
             <kbd>Home</kbd>
           </th>
           <td>Moves focus to the first cell in the row that contains focus.</td>
         </tr>
-        <tr>
+        <tr data-test-id="key-end">
           <th>
             <kbd>End</kbd>
           </th>
           <td>Moves focus to the last cell in the row that contains focus.</td>
         </tr>
-        <tr>
+        <tr data-test-id="key-control-home">
           <th>
             <kbd>Control + Home</kbd>
           </th>
           <td>Moves focus to the first cell in the first row.</td>
         </tr>
-        <tr>
+        <tr data-test-id="key-control-end">
           <th>
             <kbd>Control + End</kbd>
           </th>
@@ -580,7 +580,7 @@
         </tr>
       </thead>
       <tbody>
-        <tr>
+        <tr data-test-id="grid-role">
           <th scope="row"><code>grid</code></th>
           <td></td>
           <td><code>div</code></td>
@@ -589,7 +589,7 @@
             Because focus is managed using <a href="../../#kbd_roving_tabindex">roving tabindex</a>, the grid element is not focusable.
           </td>
         </tr>
-        <tr>
+        <tr data-test-id="aria-labelledby">
           <td></td>
           <th scope="row">
             <code>aria-labelledby=&quot;ID_REF&quot;</code>
@@ -597,7 +597,7 @@
           <td><code>div</code></td>
           <td>Refers to the element that labels the grid.</td>
         </tr>
-        <tr>
+        <tr data-test-id="aria-rowcount">
           <td></td>
           <th scope="row"><code>aria-rowcount=&quot;19&quot;</code></th>
           <td><code>div</code></td>
@@ -609,7 +609,7 @@
             </ul>
           </td>
         </tr>
-        <tr>
+        <tr data-test-id="row-role">
           <th scope="row"><code>row</code></th>
           <td></td>
           <td><code>div</code></td>
@@ -625,7 +625,7 @@
             </ul>
           </td>
         </tr>
-        <tr>
+        <tr data-test-id="aria-rowindex">
           <td></td>
           <th scope="row"><code>aria-rowindex=&quot;INDEX_VALUE&quot;</code></th>
           <td><code>div</code></td>
@@ -638,13 +638,13 @@
             </ul>
           </td>
         </tr>
-        <tr>
+        <tr data-test-id="gridcell-role">
           <th scope="row"><code>gridcell</code></th>
           <td></td>
           <td><code>span, div</code></td>
           <td>Identifies the element containing the content for a single cell.</td>
         </tr>
-        <tr>
+        <tr data-test-id="tabindex">
           <td></td>
           <th scope="row"><code>tabindex=&quot;-1&quot;</code></th>
           <td><code>span, div</code></td>
@@ -658,7 +658,7 @@
             </ul>
           </td>
         </tr>
-        <tr>
+        <tr data-test-id="tabindex">
           <td></td>
           <th scope="row"><code>tabindex=&quot;-1&quot;</code></th>
           <td>Widgets inside cells</td>
